# MathFlix

./: .gitignore  README.md  fractales.py  main.py  montecarlo.py  pyproject.toml
app/: abrefractales.py  collatz.py  furier.py  juegoVida.py  main.py  montecarlo.py
