[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "matflix"
version = "0.1"
authors = [
    {name=""}
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
# license = {file = "LICENCE"}
dependencies = [
    "typer==0.9.0",
    "pygame==2.5.2",
    "matplotlib==3.8.0",
    "fractalartmaker"
]


[tool.setuptools]
py-modules = ["app"]

[project.optional-dependencies]
dev = [
    "auto-py-to-exe"
]
